imports: If we access the user.dir property, be sure to create a File and then create a URL instead of creating a URL directly.  The reason is that user.dir could have backslashes.